Fix images on mobile

--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -108,9 +108,17 @@ canvas.logo {
     margin: 6px 0;
   }
 }
+@media (max-width: 700px) {
+  #content img {
+    max-width: 98%;
+  }
+}
 @media (min-width: 701px) and (max-width: 1200px) {
   #content {
     width: 50%;
+  }
+  #content img {
+    max-width: 50vw;
   }
 }
 @media (min-width: 1201px) and (max-width: 1700px) {
